# AndroidDaemon

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cit/daemon/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cit/daemon/app/: MainActivity.java  MainApplication.java
app/src/test/java/com/cit/daemon/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libdaemon/: CMakeLists.txt  build.gradle
libdaemon/src/androidTest/java/com/cit/daemon/: ExampleInstrumentedTest.java
libdaemon/src/main/: AndroidManifest.xml
libdaemon/src/main/cpp/: com_cit_daemon_Daemon.cpp  com_cit_daemon_Daemon.h
libdaemon/src/main/java/com/cit/daemon/: Daemon.java
libdaemon/src/main/res/values/: strings.xml
libdaemon/src/test/java/com/cit/daemon/: ExampleUnitTest.java
